--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,11 @@ dist-ssr
 
 # cPanel specific files (not for Vercel)
 fellowship.html
+fellowship-application.html
+fellowship-submit.php
+fellowship-submit-v2.php
+images/
 .htaccess
+fellowship-applications.txt
+smtp-errors.log
+test-email.php
